# garden-butler

./: .gitignore  Cargo.toml  build.sh  deploy.sh  layout.json  mqtt.json  run.sh  watering-schedules.json
src/: app.rs  gpio.rs  main.rs
src/communication/: mod.rs
src/embedded/: command.rs  configuration.rs  fake.rs  gpio.rs  mod.rs  settings.rs
src/mqtt/: command.rs  configuration.rs  mod.rs  publish.rs  status.rs
src/schedule/: command.rs  configuration.rs  mod.rs  settings.rs  watering.rs  watering_task.rs
