[package]
name = "garden-buttler"
version = "0.1.0"
authors = ["julise"]

[dependencies]
sysfs_gpio = { path = "../rust-sysfs-gpio", features = ["use_tokio"] }
serde = { version = "1.0", features = ["rc"] }
serde_derive = { version = "1.0", features = ["deserialize_in_place"] }
futures = "0.1"
tokio = "0.1"
tokio-timer = "0.2"
tokio-channel = "0.1"
tokio-signal = { version = "0.2" }
tokio-chrono = {path = "../tokio-chrono"}
config = {version = "0.9", features = ["json"]}
chrono = { version = "0.4", features = ["serde"] }
cron = "0.6"
