[package]
name = "garden-buttler"
version = "0.1.0"
authors = ["kaojo"]

[features]
gpio = ["sysfs_gpio"]

default = ["gpio"]

[dependencies]
sysfs_gpio = { version = "0.5.4", features = ["use_tokio"], optional = true }
serde = { version = "1.0", features = ["rc"] }
serde_json = { version = "1.0" }
serde_derive = { version = "1.0", features = ["deserialize_in_place"] }
futures = "0.1"
tokio = "0.1"
tokio-timer = "0.2"
tokio-channel = "0.1"
tokio-signal = { version = "0.2" }
tokio-chrono = {path = "../tokio-chrono"}
config = {version = "0.9", features = ["json"]}
chrono = { version = "0.4", features = ["serde"] }
cron = "0.6"
rumqtt = "0.30"
crossbeam = "0.7"
